# qml-screen-orientation-example

./: .gitignore  AndroidInterface.cpp  AndroidInterface.h  CMakeLists.txt  main.cpp  main.qml
